--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
   <div id="root"></div>
+
+  <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+
+  <!-- Include your compiled JavaScript file with React code -->
+  <script src="../src/index.js"></script>
+
 </body>
 </html>
