--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
 
   <!-- Include your compiled JavaScript file with React code -->
-  <script src="../src/index.js"></script>
+  <script src="../build/static/js/main.e73068ed.js"></script>
+  "></script>
 
 </body>
 </html>
