--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Breadth First Search</title>
+  <link href="../build/static/css/main.04b572bd.css">
 </head>
 <body>
   <div id="root"></div>
