--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
 
   <script src="../build/static/js/main.e73068ed.js"></script>
-  "></script>
+  </script>
 
 </body>
 </html>
